@@ -6,16 +6,13 @@ import java.io.InputStreamReader;
 
 public class CommandExecution {
     public static void main(String[] args) throws IOException {
-        String line;
-        Process p;
-
-        /* p = Runtime.getRuntime().exec("/bin/ls -al /"); */
-        p = (new ProcessBuilder("/bin/ls", "-al", "/")).start();
-        try (BufferedReader in = new BufferedReader(new InputStreamReader(p.getInputStream()))) {
+        Process process = new ProcessBuilder("/bin/ls", "-al", "/").start();
+        try (BufferedReader in = new BufferedReader(new InputStreamReader(process.getInputStream()))) {
+            String line;
             while ((line = in.readLine()) != null) {
                 System.out.println(line);
             }
         }
-        System.out.println(p.exitValue());
+        System.out.println(process.exitValue());
     }
 }
